--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4500,4 +4500,7 @@
     <!-- Hardware Rotation lock string -->
     <string name="toast_rotation_unlocked">Display rotation unlocked</string>
     <string name="toast_rotation_locked">Display rotation locked</string>
+
+    <!-- stylus gestures support -->
+    <string name="stylus_app_not_installed">%s is not installed</string>
 </resources>
