Parts of "Fix various broken bits from the rebase"
Change-Id: I2db072751de7d4e583594774b1bfa0c2a65ebf8a

Conflicts:

	core/res/res/values/strings.xml
	policy/src/com/android/internal/policy/impl/PhoneWindowManager.java

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4509,4 +4509,7 @@
     <!-- Longer version of toast bar message when hiding the transient navigation bar (if room) -->
     <string name="transient_navigation_confirmation_long">Swipe from edge of screen to reveal system bar</string>
     <add-resource type="bool" name="config_hotswapCapable"></add-resource>
+
+    <!-- Long-press back kill application -->
+    <string name="app_killed_message">Application killed</string>
 </resources>
